--- a/caopanhia/common/tests/unit.suite.yml
+++ b/caopanhia/common/tests/unit.suite.yml
@@ -2,6 +2,8 @@ suite_namespace: common\tests\unit
 actor: UnitTester
 bootstrap: false
 modules:
-    enabled:
-        - Yii2:
-            part: fixtures
+  enabled:
+    - Yii2:
+        part: [fixtures, orm]
+        transaction: false
+        cleanup: false
